Kubernetes/Frontend/Frontend-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-frontend
  template:
    metadata:
      labels:
        app: node-frontend
    spec:
      containers:
      - name: node-frontend
        image: asia-south1-docker.pkg.dev/project-37db7793-2542-41f6-9f9/dental-repo/webapp:v1
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
