Kubernetes/Frontend/Frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: node-frontend
  ports:
  - port: 80
    targetPort: 80
