Kubernetes/Frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
  labels:
    app.kubernetes.io/name: frontend-ingress
spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
